<?xml version="1.0"?>
<package>
    <name>rviz_pyplot</name>
    <version>0.0.1</version>
    <description>rviz_pyplot</description>
    <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
    <license>New BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

</package>
