<?xml version="1.0"?>
<package>
    <name>rviz_pyplot</name>
    <version>0.0.1</version>
    <description>rviz_pyplot</description>
    <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
    <license>New BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    
    <build_depend>sensor_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    
    <run_depend>sensor_msgs</run_depend> <!--sudo apt-get install ros-hydro-sensor-msgs-->
    <run_depend>visualization_msgs</run_depend>

</package>
